Fix converter draft and inline requester handling